Add edamame salad recipe content

--- a/recipes/edamame-salad.html
+++ b/recipes/edamame-salad.html
@@ -8,5 +8,12 @@
 
     <body>
         <h1>Edamame Salad</h1>
+        <img src="./images/edamame-salad.jpg" alt="edamame salad">
+
+        <h2>Description</h2>
+        <p>This protein-packed Edamame Salad tosses crunchy and
+            colorful vegetables in a Thai-inspired peanut
+            dressing. Enjoy it as a refreshing side dish or a
+            hearty meal!</p>
     </body>
 </html>
