Add edamame salad recipe content

--- a/recipes/edamame-salad.html
+++ b/recipes/edamame-salad.html
@@ -14,6 +14,42 @@
         <p>This protein-packed Edamame Salad tosses crunchy and
             colorful vegetables in a Thai-inspired peanut
             dressing. Enjoy it as a refreshing side dish or a
-            hearty meal!</p>
+            hearty meal!
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>16 ounces frozen shelled edamame</li>
+            <li>1 cup shredded red cabbage</li>
+            <li>1 cup shredded carrots</li>
+            <li>1/2 cup chopped green onions</li>
+            <li>2 cups chopped kale</li>
+            <li>1/4 cup chopped cilantro</li>
+            <li>1/2 cup chopped peanuts or cashews</li>
+            <li>6 tablespoons creamy peanut butter</li>
+            <li>3 tablespoons seasoned rice vinegar</li>
+            <li>3 tablespoons low sodium soy sauce</li>
+            <li>3 tablespoons pure maple syrup</li>
+            <li>1 teaspoon toasted sesame oil</li>
+            <li>1/4 teaspoon ground ginger</li>
+            <li>1 teaspoon Sriracha hot sauce or to taste</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook or thaw the edamame according to package
+                instructions. Rinse under cold water.</li>
+            <li>Add the edamame to a large bowl, along with all
+                other salad ingredients.</li>
+            <li>In a small-medium bowl, add the peanut sauce
+                ingredients and whisk until smooth. Whisk in a
+                little warm water if it's too thick.</li>
+            <li>
+                Pour the sauce over the salad and toss until
+                well combined.</li>
+            <li>Sprinkle more chopped nuts on top, if desired.
+                Cover and chill in the refrigerator for at least
+                an hour before serving, if possible.</li>
+        </ol>
     </body>
 </html>
