Add veggie chili recipe content

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/edamame-salad.html">Edamame Salad</a>
+        <a href="recipes/veggie-chili.html">Veggie Chili</a>
     </body>
 </html>
