Add chocolate mousse webpage link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/edamame-salad.html">Edamame Salad</a>
-        <a href="recipes/veggie-chili.html">Veggie Chili</a>
+        <ul>
+            <a href="recipes/edamame-salad.html">Edamame Salad</a>
+            <a href="recipes/veggie-chili.html">Veggie Chili</a>
+            <a href="recipes/chocolate-mousse.html">Chocolate Mousse</a>
+        </ul>
     </body>
 </html>
