Add chocolate mousse image

--- a/recipes/chocolate-mousse.html
+++ b/recipes/chocolate-mousse.html
@@ -8,7 +8,8 @@
 
     <body>
         <h1>Chocolate Mousse</h1>
-
+        <img src="./images/chocolate-mousse.jpg" alt="chocolate mousse">
+        
         <h2>Description</h2>
         <p>Tofu Chocolate Mousse is a silky smooth vegan dessert
             that will make any chocolate lover smile! Easy to
