--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./style.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="recipes/edamame-salad.html">Edamame Salad</a>
-            <a href="recipes/veggie-chili.html">Veggie Chili</a>
-            <a href="recipes/chocolate-mousse.html">Chocolate Mousse</a>
+            <li><a href="recipes/edamame-salad.html">Edamame Salad</a></li> 
+            <li><a href="recipes/veggie-chili.html">Veggie Chili</a></li>
+            <li><a href="recipes/chocolate-mousse.html">Chocolate Mousse</a></li>
         </ul>
     </body>
 </html>
