Makes home page pretty

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/edamame-salad.html">Edamame Salad</a></li> 
-            <li><a href="recipes/veggie-chili.html">Veggie Chili</a></li>
-            <li><a href="recipes/chocolate-mousse.html">Chocolate Mousse</a></li>
-        </ul>
+        <h1 class="web-name">Odin Recipes</h1>
+        <div class="line"></div>
+        <div id="three-images">
+                <a href="./recipes/edamame-salad.html">
+                    <img src="./recipes/images/edamame-salad.jpg">
+                </a>
+                <a href="./recipes/veggie-chili.html">
+                    <img src="./recipes/images/veggie-chili.jpg">
+                </a>
+                <a href="./recipes/chocolate-mousse.html">
+                    <img src="./recipes/images/chocolate-mousse.jpg">
+                </a>
+        </div>
+        <div id="three-rec">
+            <a id="rec-one" href="./recipes/edamame-salad.html">Edamame Salad</a>
+            <a id="rec-two" href="./recipes/veggie-chili.html">Veggie Chili</a>
+            <a id="rec-three" href="./recipes/chocolate-mousse.html">Chocolate Mousse</a>
+        </div>
     </body>
 </html>
